// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BudgetsNotification Testing BudgetsNotification LinkedAccounts Testing Should match snapshot: budgets-linked-accounts 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "BudgetsNotificationBudget11111111111188E95F35": Object {
      "Properties": Object {
        "Budget": Object {
          "BudgetLimit": Object {
            "Amount": 50,
            "Unit": "USD",
          },
          "BudgetName": "Monthly usage for 111111111111.",
          "BudgetType": "COST",
          "CostFilters": Object {
            "LinkedAccount": Array [
              "111111111111",
            ],
          },
          "TimeUnit": "MONTHLY",
        },
        "NotificationsWithSubscribers": Array [
          Object {
            "Notification": Object {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 60,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": Array [
              Object {
                "Address": Object {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          Object {
            "Notification": Object {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 80,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": Array [
              Object {
                "Address": Object {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          Object {
            "Notification": Object {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 100,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": Array [
              Object {
                "Address": Object {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
        ],
      },
      "Type": "AWS::Budgets::Budget",
    },
    "BudgetsNotificationBudget22222222222281269B64": Object {
      "Properties": Object {
        "Budget": Object {
          "BudgetLimit": Object {
            "Amount": 50,
            "Unit": "USD",
          },
          "BudgetName": "Monthly usage for 222222222222.",
          "BudgetType": "COST",
          "CostFilters": Object {
            "LinkedAccount": Array [
              "222222222222",
            ],
          },
          "TimeUnit": "MONTHLY",
        },
        "NotificationsWithSubscribers": Array [
          Object {
            "Notification": Object {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 60,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": Array [
              Object {
                "Address": Object {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          Object {
            "Notification": Object {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 80,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": Array [
              Object {
                "Address": Object {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          Object {
            "Notification": Object {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 100,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": Array [
              Object {
                "Address": Object {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
        ],
      },
      "Type": "AWS::Budgets::Budget",
    },
    "BudgetsNotificationNotificationTopicDFB74E64": Object {
      "Properties": Object {
        "DisplayName": "budget-notification-586e7973-topic",
        "TopicName": "budget-notification-586e7973-topic",
      },
      "Type": "AWS::SNS::Topic",
    },
    "BudgetsNotificationNotificationTopicPolicyD5C1A9D0": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "budgets.amazonaws.com",
              },
              "Resource": Object {
                "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
              },
              "Sid": "AWSBudgetsSNSPublishingPermissions",
            },
            Object {
              "Action": Array [
                "sns:GetTopicAttributes",
                "sns:SetTopicAttributes",
                "sns:AddPermission",
                "sns:RemovePermission",
                "sns:DeleteTopic",
                "sns:Subscribe",
                "sns:ListSubscriptionsByTopic",
                "sns:Publish",
                "sns:Receive",
              ],
              "Condition": Object {
                "StringEquals": Object {
                  "AWS:SourceOwner": "123456789012",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Object {
                "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
              },
              "Sid": "OwnerSNSActionPermissions",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": Array [
          Object {
            "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "BudgetsNotificationSlackChannelConfigBE947213": Object {
      "Properties": Object {
        "ConfigurationName": "slack-channel-budget-notification-586e7973-config",
        "IamRoleArn": Object {
          "Fn::GetAtt": Array [
            "BudgetsNotificationSlackChannelConfigRole34A2F398",
            "Arn",
          ],
        },
        "LoggingLevel": "ERROR",
        "SlackChannelId": "XXXXXXXX",
        "SlackWorkspaceId": "T0XXXX111",
        "SnsTopicArns": Array [
          Object {
            "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
          },
        ],
      },
      "Type": "AWS::Chatbot::SlackChannelConfiguration",
    },
    "BudgetsNotificationSlackChannelConfigRole34A2F398": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "chatbot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "slack channel budget notification config role.",
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "cloudwatch:Describe*",
                    "cloudwatch:Get*",
                    "cloudwatch:List*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "chatbot-policy",
          },
        ],
        "RoleName": "slack-channel-budget-notification-586e7973-config-role",
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`BudgetsNotification Testing BudgetsNotification Normal Testing Should match snapshot: budgets-normal 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "BudgetsNotificationBudgetB79C7685": Object {
      "Properties": Object {
        "Budget": Object {
          "BudgetLimit": Object {
            "Amount": 50,
            "Unit": "USD",
          },
          "BudgetName": "Monthly usage",
          "BudgetType": "COST",
          "TimeUnit": "MONTHLY",
        },
        "NotificationsWithSubscribers": Array [
          Object {
            "Notification": Object {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 60,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": Array [
              Object {
                "Address": Object {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          Object {
            "Notification": Object {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 80,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": Array [
              Object {
                "Address": Object {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          Object {
            "Notification": Object {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 100,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": Array [
              Object {
                "Address": Object {
                  "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
        ],
      },
      "Type": "AWS::Budgets::Budget",
    },
    "BudgetsNotificationNotificationTopicDFB74E64": Object {
      "Properties": Object {
        "DisplayName": "budget-notification-586e7973-topic",
        "TopicName": "budget-notification-586e7973-topic",
      },
      "Type": "AWS::SNS::Topic",
    },
    "BudgetsNotificationNotificationTopicPolicyD5C1A9D0": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "budgets.amazonaws.com",
              },
              "Resource": Object {
                "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
              },
              "Sid": "AWSBudgetsSNSPublishingPermissions",
            },
            Object {
              "Action": Array [
                "sns:GetTopicAttributes",
                "sns:SetTopicAttributes",
                "sns:AddPermission",
                "sns:RemovePermission",
                "sns:DeleteTopic",
                "sns:Subscribe",
                "sns:ListSubscriptionsByTopic",
                "sns:Publish",
                "sns:Receive",
              ],
              "Condition": Object {
                "StringEquals": Object {
                  "AWS:SourceOwner": "123456789012",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Object {
                "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
              },
              "Sid": "OwnerSNSActionPermissions",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": Array [
          Object {
            "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "BudgetsNotificationSlackChannelConfigBE947213": Object {
      "Properties": Object {
        "ConfigurationName": "slack-channel-budget-notification-586e7973-config",
        "IamRoleArn": Object {
          "Fn::GetAtt": Array [
            "BudgetsNotificationSlackChannelConfigRole34A2F398",
            "Arn",
          ],
        },
        "LoggingLevel": "ERROR",
        "SlackChannelId": "XXXXXXXX",
        "SlackWorkspaceId": "T0XXXX111",
        "SnsTopicArns": Array [
          Object {
            "Ref": "BudgetsNotificationNotificationTopicDFB74E64",
          },
        ],
      },
      "Type": "AWS::Chatbot::SlackChannelConfiguration",
    },
    "BudgetsNotificationSlackChannelConfigRole34A2F398": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "chatbot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "slack channel budget notification config role.",
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "cloudwatch:Describe*",
                    "cloudwatch:Get*",
                    "cloudwatch:List*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "chatbot-policy",
          },
        ],
        "RoleName": "slack-channel-budget-notification-586e7973-config-role",
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
